--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length 40.6cm x Width 40.6cm x Height 25.4cm</td>
+                    <td>Dia. 40.6cm x Height 25.4cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -177,15 +177,15 @@
                 </tr>
                 <tr>
                     <th>20 Ft Container Quantity</th>
-                    <td>3262.1359223300969 </td>
+                    <td>3262 </td>
                 </tr>
                 <tr>
                     <th>40 Ft Container Quantity</th>
-                    <td>6757.2815533980593 </td>
+                    <td>6757 </td>
                 </tr>
                 <tr>
                     <th>40 HQ Container Quantity</th>
-                    <td>7922.3300970873797 </td>
+                    <td>7922 </td>
                  </tr>
                 <tr>
                     <th>Price</th>
@@ -208,3 +208,4 @@
     </div>
 </body>
 </html>
+
